`codec`, `codec-osrs-game`, and some `codec-osrs-game-r209`, with start of `server` with Netty implementation