@@ -1,3 +1,27 @@
 plugins {
     netrune
+
+    application
+}
+
+dependencies {
+    implementation(projects.net)
+    implementation(libs.slf4j.api)
+    runtimeOnly(libs.slf4j.simple)
+    implementation(libs.runelite.cache)
+    implementation(libs.openrs2.buffer)
+    implementation(projects.codec)
+}
+
+application {
+    mainClass.set("org.jire.netrune.server.Main")
+    applicationDefaultJvmArgs = listOf(
+        "-XX:-OmitStackTraceInFastThrow",
+        "--add-opens=java.base/java.time=ALL-UNNAMED",
+        "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang=ALL-UNNAMED",
+        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+        "--add-opens=java.base/java.io=ALL-UNNAMED",
+        "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
+    )
 }
